--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "draft-js": "^0.10.4",
+    "draft-js-export-html": "^1.2.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -38,6 +40,7 @@
     "react": "^16.5.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-draft-wysiwyg": "^1.12.1",
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.3.1",
     "react-simple-sidenav": "^1.0.1",
